atualização de estilos

--- a/desafios/desafio011/cordel.html
+++ b/desafios/desafio011/cordel.html
@@ -21,8 +21,8 @@
             Antes que eu caduque <br>
             Vou dizer tudo em poesia.</p>
     </section>
-    <section class="imagem1">
-        <p class="fundo">
+    <section class="imagem">
+        <p>
             Não é mais como era antes <br> 
             É tudo abreviado <br>
             "Você" só tem duas letras <br>
@@ -52,8 +52,8 @@
             Decifre esse rabisco. 
         </p>
     </section>
-    <section class="imagem2">
-        <p class="fundo">
+    <section class="imagem">
+        <p>
             Tenho saudade das cartas <br> 
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br> 
