--- a/desafios/desafio011/cordel.html
+++ b/desafios/desafio011/cordel.html
@@ -21,7 +21,7 @@
             Antes que eu caduque <br>
             Vou dizer tudo em poesia.</p>
     </section>
-    <section class="imagem">
+    <section class="imagem" id="img1">
         <p>
             Não é mais como era antes <br> 
             É tudo abreviado <br>
@@ -52,7 +52,7 @@
             Decifre esse rabisco. 
         </p>
     </section>
-    <section class="imagem">
+    <section class="imagem" id="img2">
         <p>
             Tenho saudade das cartas <br> 
             Escritas com a própria mão <br>
